<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Befit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="userHintTextField">Enter Your Email-id</string>
    <string name="userHintPassField">Enter Your password</string>
    <string name="loginBtn">Login</string>
    <string name="diretToSignUp">Don\'t have an account</string>
    <string name="signUpBtn">Sign up</string>
    <string name="directToLogin">Already have an account!</string>
    <string name="currentPass">Current Password</string>
    <string name="newPass">New Password</string>
    <string name="confirmPass">Confirm new password</string>
    <string name="chngPassBtn">Change Password</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="hintEmail">Enter your mail</string>
    <string name="hintPass">Enter your password</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_custom">Custom</string>
    <string name="menu_workout">Workouts</string>
    <string name="logout">logout</string>
    <string name="custom">Bmi Calculator</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chest01_bench_press_roded">-> Lie flat on your back on a bench.
Grip the bar with hands just wider than shoulder-width apart, so when you’re at the bottom of your move your hands are directly above your elbows. This allows for maximum force generation.
Bring the bar slowly down to your chest as you breathe in.
Push up as you breathe out, gripping the bar hard and watching a spot on the ceiling rather than the bar, so you can ensure it travels the same path every time.
    </string>

    <string name="stepsForPushUps"><b>Steps for doing the push ups perfectly:- \n</b>1)Contract your abs and tighten your core by pulling your belly button towards your spine.\n2)Inhale as you slowly bend your elbows and lower yourself to the floor, until your elbows are at a 90-degree angle.\n3)Exhale while contracting your chest muscles and pushing back up through your hands, returning to the start position.</string>
    <string name="chestExercise1_common_mistakes_subtext01"><b>#1 – Hands too far forward</b> Make sure your hands are directly under your shoulders when starting and finishing your push up.</string>
    <string name="chestExercise1_common_mistakes_subtext02"><b>#2 – Hips too low</b> It is vital to keep your hips level with your shoulders throughout the entire movement including the start and the finish of a push up. </string>
    <string name="chestExercise1_common_mistakes_subtext03"><b>#3 – Elbows pointed out</b>As you can see with this poor technique, when one’s elbows point out to the side their head meets their hands at the bottom position. This is not good. This can present shoulder pain and is a compensation of poor core control during the lowering and raising portion of the push up movement.</string>
    <string name="chestExercise1_common_mistakes_subtext04"><b>Changing Your Grip Width:</b>Changing your grip width can have a huge effect on what muscles are working and how much weight you can lift. Having a slightly wider or narrower grip can make you drastically weaker or stronger, making it difficult to accurately gauge progress.</string>
    <string name="chestExercise1_common_mistakes_subtext05"><b>Getting The Chest Touch Wrong:</b>Make sure to touch your chest on every rep, if you feel you can’t then lower the weight on the bar.When you do touch your chest, don’t bounce it off your sternum! Tap your chest then press it up – you should be in control the entire time.</string>
    <string name="chestExercise1_common_mistakes_subtext06"><b>Using A Thumbless Grip:</b>Using a thumbless grip has no benefit and you risk literally dropping the bar onto your face, neck or chest. Grab the bar with your thumbs around it and squeeze it as hard as you can. This will help generate more force and recruit more muscles.</string>
    <string name="beginner">Beginner</string>
</resources>