<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userAuth.SignUp">

    <EditText
        android:id="@+id/SmailTf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="42dp"
        android:ems="10"
        android:hint="@string/userHintTextField"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/SpassTf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="42dp"
        android:ems="10"
        android:hint="@string/userHintPassField"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SmailTf" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="42dp"
        android:text="@string/signUpBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SpassTf" />

    <Button
        android:id="@+id/directToLoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="42dp"
        android:text="@string/directToLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>