<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.befit.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.befit.ui.gallery.Diet"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.befit.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <activity
        android:id="@+id/setRemainder"
        android:name="com.example.befit.SetRemainder"
        android:label="Reminder"
        tools:layout="@layout/activity_set_remainder"/>
    <activity
        android:id="@+id/bmiCalculator"
        android:name="com.example.befit.BmiCalculator"
        android:label="BMIcalculator"
        tools:layout="@layout/activity_bmi_calculator"/>

    <activity
        android:id="@+id/blog"
        android:name="com.example.befit.BlogPage"
        android:label="BlogPage"
        tools:layout="@layout/activity_blog_page"/>

    <activity
        android:id="@+id/logout"
        android:name="com.example.befit.userAuth.Logout"
        tools:layout="@layout/activity_logout"/>
</navigation>